--- a/rsvp.html
+++ b/rsvp.html
@@ -70,7 +70,6 @@
 
         .scene {
             height: 150vh;
-            padding: 5vh 10vw;
         }
 
         .parallax {
@@ -107,17 +106,11 @@
             -webkit-overflow-scrolling: touch;
         }
 
-        .woods {
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
 
         .solid {
             z-index: 1;
             position: relative;
-            height: 100vh;
+            height: 1770px;
             font-size: 1em;
             color: #333;
             line-height: 1.5em;
@@ -181,37 +174,17 @@
 
     <div>
         <!-- Specifying a parallax rate of 0.3 will slide the image at that proportion of the scroll speed. -->
-        <div class="parallax header" style="background-image: url('images/athens2.jpg');" parallax="0.3"></div>
+        <div class="parallax header" style="background-image: url('images/athens.jpg');" parallax="0.3"></div>
 
 
         <div class="scene header">
-            <h1>A nossa história</h1>
+            <h1>RSVP</h1>
         </div>
 
-        <div class="scene solid star">
-            <h2>Conhecemo-nos na Serenata em Maio de 2009...</h2>
-
-            <p>Era o nosso primeiro ano de universidade e estávamos a criar o fa moso cordão de Engenharia na Serenata e
-                foi aí que começamos a falar um com o outro e gostamos muito. Após este dia encontramo-nos várias vezes,
-                ficamos grandes amigos e apaixonamo-nos. No final do ano, no dia 2 de Dezembro, ambos com 19 anos,
-                começamos a namorar. Após 8 anos de nos conhecermos e mais de 7 anos de namoro decidimos casar e passar
-                o resto das nossas vida juntos. =)
-            </p>
-        </div>
-        <!-- When a rate isn't specified, it will be calculated such that the image always fills the space between the
-               element before it and the next element with the "parallax-cover" attribute. -->
-        <div class="parallax" style="background-image: url('images/ring.jpg');" parallax></div>
-
-
-        <div class="scene woods">
-            <h1>Ela aceitou</h1>
+        <div class="scene solid">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe48z5-fokJ12XOAI3pjcXGwG9ehWg5fJg1qPi5ZI1Dh7vbcg/viewform?embedded=true" width="100%" height="1770px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
         </div>
 
-        <div class="scene solid woods" parallax-cover>
-            <div style="background: url(images/venice.jpg) center;background-size: cover; width: 100%;height: 100%;">
-                <h2>Test</h2>
-            </div>
-        </div>
     </div>
 </div>
 </body>
