--- a/venue.html
+++ b/venue.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta charset="utf-8">
-
     <meta name="viewport" content="width=device-width" />
     <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro"
           rel="stylesheet">
@@ -49,23 +48,28 @@
             box-sizing: border-box;
         }
 
-        h1,
-        h2 {
+        h1, h2, h3, h4 {
             font-family: "BrandonGrotesque", sans-serif;
+        }
+
+        h1 {
+            font-size: 80px;
             font-weight: 300;
             font-style: normal;
             letter-spacing: .11em;
             line-height: 1em;
             text-align: center;
+            text-transform: uppercase;
         }
 
-        h1 {
-            font-size: 100px;
+        h1.porto {
+            font-size: 80px;
             text-transform: uppercase;
         }
 
         h2 {
-            font-size: 2.5em;
+            font-size: 2rem;
+            letter-spacing: -0.35px;
         }
 
         .scene {
@@ -87,6 +91,9 @@
 
         .header {
             height: calc(100vh + 76px);
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .parallax.header {
@@ -107,25 +114,29 @@
             -webkit-overflow-scrolling: touch;
         }
 
-        .woods {
-            padding: 0;
+        .star {
+            height: 90vh;
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             justify-content: center;
         }
 
         .solid {
             z-index: 1;
             position: relative;
-            height: 100vh;
-            font-size: 1em;
+            height: 50vh;
             color: #333;
-            line-height: 1.5em;
             display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
+            justify-content: space-around;
+            align-items: center;
+            flex-wrap: wrap;
             background-color: #fff;
+            padding: 2vh 5vw;
+        }
+
+        .venue-place {
+            padding: 0 5vw;
+            text-align: center;
         }
 
         header {
@@ -137,7 +148,7 @@
             text-transform: uppercase;
             display: flex;
             width: 100%;
-            justify-content: flex-end;
+            justify-content: center;
             padding: 1rem 2rem;
         }
 
@@ -148,16 +159,23 @@
             padding: 1rem;
             transition: color 150ms ease-in;
         }
+
         header:hover a {
             color: rgba(0, 0, 0, 0.3);
         }
+
         header a:hover {
             color: rgba(0, 0, 0, 0.68) !important;
         }
+
         @media screen and (min-width: 768px) {
 
             header {
                 justify-content: flex-end;
+            }
+
+            h1.porto {
+                font-size: 120px;
             }
         }
     </style>
@@ -181,37 +199,41 @@
 
     <div>
         <!-- Specifying a parallax rate of 0.3 will slide the image at that proportion of the scroll speed. -->
-        <div class="parallax header" style="background-image: url('images/athens2.jpg');" parallax="0.3"></div>
+        <div class="parallax header" style="background-image: url('images/miranda.jpg');" parallax="0.3"></div>
 
 
         <div class="scene header">
-            <h1>A nossa história</h1>
+            <h1>19 de Maio, 2018</h1>
         </div>
 
-        <div class="scene solid star">
-            <h2>Conhecemo-nos na Serenata em Maio de 2009...</h2>
-
-            <p>Era o nosso primeiro ano de universidade e estávamos a criar o fa moso cordão de Engenharia na Serenata e
-                foi aí que começamos a falar um com o outro e gostamos muito. Após este dia encontramo-nos várias vezes,
-                ficamos grandes amigos e apaixonamo-nos. No final do ano, no dia 2 de Dezembro, ambos com 19 anos,
-                começamos a namorar. Após 8 anos de nos conhecermos e mais de 7 anos de namoro decidimos casar e passar
-                o resto das nossas vida juntos. =)
-            </p>
+        <div class="scene star" style="background: url(images/porto.jpg) center;background-size: cover;">
+            <h1 class="porto">Porto</h1>
         </div>
         <!-- When a rate isn't specified, it will be calculated such that the image always fills the space between the
                element before it and the next element with the "parallax-cover" attribute. -->
-        <div class="parallax" style="background-image: url('images/ring.jpg');" parallax></div>
+        <div class="parallax solid" parallax-cover>
+            <div class="venue-place">
+                <h2>Cerimónia</h2>
+                12:00
 
-
-        <div class="scene woods">
-            <h1>Ela aceitou</h1>
-        </div>
-
-        <div class="scene solid woods" parallax-cover>
-            <div style="background: url(images/venice.jpg) center;background-size: cover; width: 100%;height: 100%;">
-                <h2>Test</h2>
+                <p>
+                    <em>Igreja da Lapa</em><br/>
+                    Largo da Lapa 9<br/>
+                    Porto, Portugal
+                </p>
+            </div>
+            <div class="venue-place">
+                <h2>Copo-de-água</h2>
+                14:30
+                <p>
+                    <em>Casa do Ribeirinho</em><br/>
+                    R. Dr. José Ventura 31<br/>
+                    Matosinhos, Portugal
+                </p>
             </div>
         </div>
+
+
     </div>
 </div>
 </body>
