Reduce picture size. Added links for location. Fix responsivity.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8">
 
+    <title>Vamos casar!</title>
     <meta name="viewport" content="width=device-width" />
+    <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro"
           rel="stylesheet">
     <style>
