--- a/rsvp.html
+++ b/rsvp.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-
+    <title>RSVP</title>
     <meta name="viewport" content="width=device-width" />
+    <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro"
           rel="stylesheet">
     <style>
