--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 
 <header>
     <a href="/">A nossa história</a>
-    <a href="/venue.html">Quando & Onde</a>
-    <a href="/rsvp.html">RSVP</a>
+    <a href="/venue">Quando & Onde</a>
+    <a href="/rsvp">RSVP</a>
 </header>
 
 <div class="viewport">
