--- a/venue/index.html
+++ b/venue/index.html
@@ -4,32 +4,32 @@
         <meta charset="utf-8">
         <title>Quando & Onde</title>
         <meta name="viewport" content="width=device-width" />
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="../favicon.ico">
         <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro"
               rel="stylesheet">
         <style>
             @font-face {
                 font-family: "BrandonGrotesque";
-                src: url("./fonts/Brandonthin.eot"); /* IE9 Compat Modes */
-                src: url("./fonts/Brandonthin.eot?#iefix") format("embedded-opentype"),
-                url("./fonts/Brandonthin.otf") format("opentype"),
-                url("./fonts/Brandonthin.svg") format("svg"),
-                url("./fonts/Brandonthin.ttf") format("truetype"),
-                url("./fonts/Brandonthin.woff") format("woff"),
-                url("./fonts/Brandonthin.woff2") format("woff2"); /* Modern Browsers */
+                src: url("../fonts/Brandonthin.eot"); /* IE9 Compat Modes */
+                src: url("../fonts/Brandonthin.eot?#iefix") format("embedded-opentype"),
+                url("../fonts/Brandonthin.otf") format("opentype"),
+                url("../fonts/Brandonthin.svg") format("svg"),
+                url("../fonts/Brandonthin.ttf") format("truetype"),
+                url("../fonts/Brandonthin.woff") format("woff"),
+                url("../fonts/Brandonthin.woff2") format("woff2"); /* Modern Browsers */
                 font-weight: 300;
                 font-style: normal;
             }
 
             @font-face {
                 font-family: "BrandonGrotesque";
-                src: url("./fonts/Brandonreg.eot"); /* IE9 Compat Modes */
-                src: url("./fonts/Brandonreg.eot?#iefix") format("embedded-opentype"),
-                url("./fonts/Brandonreg.otf") format("opentype"),
-                url("./fonts/Brandonreg.svg") format("svg"),
-                url("./fonts/Brandonreg.ttf") format("truetype"),
-                url("./fonts/Brandonreg.woff") format("woff"),
-                url("./fonts/Brandonreg.woff2") format("woff2"); /* Modern Browsers */
+                src: url("../fonts/Brandonreg.eot"); /* IE9 Compat Modes */
+                src: url("../fonts/Brandonreg.eot?#iefix") format("embedded-opentype"),
+                url("../fonts/Brandonreg.otf") format("opentype"),
+                url("../fonts/Brandonreg.svg") format("svg"),
+                url("../fonts/Brandonreg.ttf") format("truetype"),
+                url("../fonts/Brandonreg.woff") format("woff"),
+                url("../fonts/Brandonreg.woff2") format("woff2"); /* Modern Browsers */
                 font-weight: normal;
                 font-style: normal;
             }
@@ -220,7 +220,7 @@
                 color: #fff;
             }
         </style>
-        <script src="scripts/parallax.js"></script>
+        <script src="../scripts/parallax.js"></script>
         <script>
           document.addEventListener("DOMContentLoaded", function () {
             initializeParallax(document.querySelector(".viewport"));
@@ -232,22 +232,22 @@
 
         <header>
             <a href="/">A nossa história</a>
-            <a href="/venue.html">Quando & Onde</a>
-            <a href="/rsvp.html">RSVP</a>
+            <a href="/venue">Quando & Onde</a>
+            <a href="/rsvp">RSVP</a>
         </header>
 
         <div class="viewport">
 
             <div>
                 <!-- Specifying a parallax rate of 0.3 will slide the image at that proportion of the scroll speed. -->
-                <div class="parallax header" style="background-image: url('images/miranda.jpg');" parallax="0.3"></div>
+                <div class="parallax header" style="background-image: url('../images/miranda.jpg');" parallax="0.3"></div>
 
 
                 <div class="scene header">
                     <h1>19 de Maio, 2018</h1>
                 </div>
 
-                <div class="scene star" style="background: url(images/porto.jpg) center;background-size: cover;">
+                <div class="scene star" style="background: url(../images/porto.jpg) center;background-size: cover;">
                     <h1 class="porto">Porto</h1>
                 </div>
                 <!-- When a rate isn't specified, it will be calculated such that the image always fills the space between the
