--- a/venue/index.html
+++ b/venue/index.html
@@ -265,7 +265,7 @@
 
                         <a class="button"
                            target="_blank"
-                           href="https://www.google.pt/maps/place/Igreja+da+lapa,+Largo+da+Lapa+9,+Porto">MAPA</a>
+                           href="https://goo.gl/maps/3RPuktGSme52">MAPA</a>
                     </div>
                     <div class="venue-place">
                         <h2>Copo-de-água</h2>
@@ -277,7 +277,7 @@
                         </p>
                         <a class="button"
                            target="_blank"
-                           href="https://www.google.pt/maps/place/Casa+do+Ribeirinho,+R.+Dr.+José+Ventura+31,+Matosinhos/">MAPA</a>
+                           href="https://goo.gl/maps/WoaD9wjAHu82">MAPA</a>
                     </div>
                 </div>
 
