Change history text.

--- a/index.html
+++ b/index.html
@@ -226,11 +226,10 @@
         <div class="scene solid star">
             <h2>Conhecemo-nos na Serenata em Maio de 2009...</h2>
 
-            <p>Era o nosso primeiro ano de universidade e estávamos a criar o famoso cordão de Engenharia na Serenata e
-                foi aí que falamos pela primeira vez.
-                Após este dia encontramo-nos várias vezes, ficamos grandes amigos e apaixonamo-nos. No final do ano,
-                no dia 2 de Dezembro, ambos com 19 anos, começamos a namorar. Após 8 anos de nos conhecermos e mais de
-                7 anos de namoro decidimos casar e passar o resto das nossas vida juntos. =)
+            <p>Era o nosso primeiro ano de universidade e estávamos no famoso cordão de Engenharia na Serenata
+                e foi aí que falámos pela primeira vez. Após este dia encontramo-nos frequentemente na faculdade,
+                ficamos grandes amigos e apaixonamo-nos. No final do ano, no dia 2 de Dezembro,
+                ambos com 19 anos, começámos a namorar. Após 8 anos de namoro, decidimos dar o nó e dizer "Sim, eu aceito!". =)
 
             </p>
         </div>
